[gd_scene load_steps=2 format=3 uid="uid://bodety5m4r7ft"]

[ext_resource type="Script" uid="uid://cmu7ybx366h70" path="res://settings_menu.gd" id="1_ufg0w"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ufg0w")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Settings"

[node name="Label5" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "___________________________"

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Audio"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Music"

[node name="MusicVolumeSlider" type="HSlider" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
min_value = -30.0
max_value = 0.0

[node name="Label4" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "SFX"

[node name="SFXVolumeSlider" type="HSlider" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
min_value = -30.0
max_value = 0.0

[node name="BackButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Back"
